Add JavaScript tag

--- a/_posts/2016-04-28-AngularJS-Form-Validation.html
+++ b/_posts/2016-04-28-AngularJS-Form-Validation.html
@@ -2,9 +2,9 @@
 layout: post
 title: AngularJS Form Validation Using ngMessages
 date:   2016-04-28 11:28:00
-tags: Angular
-subclass: 'post tag-Angular'
-categories: 'javascript'
+tags: Angular JavaScript
+subclass: 'post tag-Angular tag-JavaScript'
+categories: 'JavaScript'
 navigation: True
 logo: 'assets/images/ghost.png'
 ---
